--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
 
   <div class="flipbook-container">
-    <div class="_df_book" webgl="true" backgroundcolor="teal" source="dflip/images/catalog.pdf" id="df_manual_book">
+    <div class="_df_book" webgl="true" backgroundcolor="teal" source="dflip/images/3.pdf" id="df_manual_book">
     </div>
   </div>
 
